--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
 
     <string name="app_name">iBeaconRef</string>
-
+    <string name="debug_prefs_title">Debug</string>
+    <string name="pref_debug_eventhub_summary">Check to use the debug Event Hub</string>
+    <string name="pref_debug_eventhub_title">Debug EventHub</string>
+    
+    <string name="label_settings">Settings</string>
 </resources>
